// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bodied-insert-2.ts: Bodied Extension: Insert Bullet list 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "bodied-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
        "text": null,
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "listItem",
            },
          ],
          "type": "bulletList",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
}
`;

exports[`bodied-insert-2.ts: Bodied Extension: Insert Numbered list 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "bodied-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
        "text": null,
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "listItem",
            },
          ],
          "type": "orderedList",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
}
`;

exports[`bodied-insert-2.ts: Bodied Extension: Insert action 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "bodied-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
        "text": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "localId": "abc-123",
          },
          "content": Array [
            Object {
              "attrs": Object {
                "localId": "abc-123",
                "state": "TODO",
              },
              "type": "taskItem",
            },
          ],
          "type": "taskList",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
}
`;

exports[`bodied-insert-2.ts: Bodied Extension: Insert table 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "bodied-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
        "text": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__autoSize": false,
            "isNumberColumnEnabled": false,
            "layout": "default",
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
              ],
              "type": "tableRow",
            },
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
          ],
          "type": "table",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
}
`;
